# trade-swarm

./: .commitmsg  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt
.streamlit/: config.toml
agents/: __init__.py
agents/signal/: __init__.py  trend_agent.py
backtest/: run.py  walk_forward.py
brokers/: alpaca_adapter.py
dashboard/: __init__.py  app.py
data/: __init__.py  fetcher.py  indicators.py  regime.py
docs/specialist_agents/: EXECUTION_AGENT.md  REGIME_AGENT.md  RISK_AGENT.md  SENTIMENT_AGENT.md  SIGNAL_AGENT.md
lab/: .gitignore  LAB_SUMMARY.md  README.md  __init__.py  cleanup_job.py  cli.py
lab/agents/execution/: __init__.py  base.py  execution_agent.py
lab/agents/regime/: __init__.py  base.py  regime_agent.py
lab/agents/risk/: __init__.py  base.py  risk_agent.py
lab/agents/sentiment/: __init__.py  base.py  sentiment_agent.py
lab/agents/signal/: __init__.py  base.py  breakout.py  indicators.py  mean_reversion.py  momentum.py  register.py  trend_agent.py
lab/config/: lab_config.py
lab/dashboard/: app.py
lab/dashboard/templates/: agents.html  base.html  compare.html  compare_select.html  experiment_detail.html  experiments.html  overview.html  signals.html  trades.html
lab/data/: fetcher.py
lab/data/persistence/: __init__.py  chained_store.py  directory_store.py  interfaces.py  postgres_store.py  redis_stream.py
lab/data/persistence/workers/: __init__.py  directory_worker.py  postgres_worker.py
lab/data/sources/: histdata_source.py  ibkr_source.py  synthetic_gbm.py  yfinance_source.py
lab/data/sources/ctrader/: base.py  eightcap.py  ic_markets.py  pepperstone.py
lab/harness/: batch_runner.py  coordinator.py  factory.py  runner.py
lab/metrics/: __init__.py  execution_metrics.py  regime_metrics.py  risk_metrics.py  sentiment_metrics.py  signal_metrics.py
lab/synthetic/: generator.py
lab/synthetic/configs/: default.yaml  gap_event.yaml  latency.yaml  vol_spike.yaml
logging/: __init__.py  activity_log.py  trade_log.py
planning/research/: METHODOLOGY.md
planning/research/v0.1.0/: RESEARCH.md
planning/system_specs/v0.1.0/: CHECKLIST.md  EXPERIMENT_LOG.md  v0.1.0.md
planning/system_specs/v0.2.0/: CHECKLIST.md  EXPERIMENT_LOG.md  VPS_DEPLOYMENT.md  v0.2.0.md
planning/system_specs/v0.3.0/: v0.3.0.md
planning/system_specs/v0.4.0/: v0.4.0.md
planning/system_specs/v0.5.0/: v0.5.0.md
planning/system_specs/v0.9.0/: v0.9.0.md
planning/system_specs/v1.0.0/: v1.0.0.md
risk/: __init__.py  gate.py  position_sizer.py
scripts/: activate_kill_switch.py  generate_mmd_diagrams.py  run_experiments.py  run_wf_tuning.py
ui/: app.py
ui/static/css/: style.css
ui/static/js/: app.js
ui/templates/: index.html
