[project]
name = "trade-swarm"
version = "0.2.0"
description = "Trade-Swarm — multi-agent trading system."
requires-python = ">=3.10"
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "flask",
    "hmmlearn",
    "scikit-learn",
    "alpaca-trade-api",
    "redis",
    "streamlit",
    "python-dotenv",
    # "pandas-ta",  # optional: pure pandas indicators on Python 3.14+
    # "vectorbt",   # optional: requires Python 3.10-3.13 (numba)
]

[project.optional-dependencies]
orchestrator = ["httpx", "langgraph", "langchain"]

[project.scripts]
trade-swarm-backtest = "backtest.run:main"
trade-swarm-ui = "ui.app:run_app"
trade-swarm-diagrams = "scripts.generate_mmd_diagrams:main"
trade-swarm-paper = "main:run"

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
include = ["agents*", "backtest*", "brokers*", "data*", "dashboard*", "logging*", "risk*", "ui*", "scripts*"]