[project]
name = "trade-swarm-lab"
version = "0.1.0"
description = "Trade-Swarm Agent Laboratory — validate specialist trading agents before live trading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
    "redis>=5.0.0",
    "streamlit>=1.28.0",
    "yfinance>=0.2.0",
    "hmmlearn>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
all = [
    "psycopg2-binary>=2.9.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
